--- a/MKXIndex/www/page1.html
+++ b/MKXIndex/www/page1.html
@@ -5,60 +5,62 @@
     <link rel="stylesheet" type="text/css" href="css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<body class="bg2"><center><br><br><br>
+<body class="bg2 infinite-scroll" ><center><br><br><br>
 	<b class="line1">Select Your Fighter</b><br>
-				<table rows="4" cols="9" cellpadding="30%">
-			<tbody>
-				<tr>
-					<td><a href="page2.html"><img src="img/1.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/2.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/3.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/4.jpg"/></a></td>
+<div class="page-content " >
+  <div class="content-block">
+				<table rows="4" cols="9" cellpadding="30%" class="content-block-content">
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/1.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/2.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/3.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/4.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/5.png"/></a></td>
-					<td><a href="page2.html"><img src="img/6.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/7.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/8.jpg"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/5.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/6.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/7.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/8.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/9.png"/></a></td>
-					<td><a href="page2.html"><img src="img/10.png"/></a></td>
-					<td><a href="page2.html"><img src="img/11.png"/></a></td>
-					<td><a href="page2.html"><img src="img/12.png"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/9.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/10.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/11.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/12.png" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/13.png"/></a></td>
-					<td><a href="page2.html"><img src="img/14.png"/></a></td>
-					<td><a href="page2.html"><img src="img/15.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/16.jpg"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/13.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/14.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/15.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/16.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/17.png"/></a></td>
-					<td><a href="page2.html"><img src="img/18.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/19.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/20.jpg"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/17.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/18.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/19.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/20.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/21.png"/></a></td>
-					<td><a href="page2.html"><img src="img/22.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/23.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/24.png"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/21.png" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/22.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/23.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/24.png" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-				<tr>
-					<td><a href="page2.html"><img src="img/25.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/26.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/27.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/28.jpg"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/25.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/26.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/27.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/28.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-					<td><a href="page2.html"><img src="img/29.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/30.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/31.jpg"/></a></td>
-					<td><a href="page2.html"><img src="img/32.jpg"/></a></td>
+				<tr  class="content-block-inner">
+					<td><a href="page2.html"><img src="img/29.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/30.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/31.jpg" class="lazy lazy-fadeIn"/></a></td>
+					<td><a href="page2.html"><img src="img/32.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-					<td><a href="page2.html"><img src="img/33.jpg"/></a></td>
+				<tr class="content-block-inner">
+					<td><a href="page2.html"><img src="img/33.jpg" class="lazy lazy-fadeIn"/></a></td>
 				</tr>
-			</tbody>	
 				</table>
 </center>
 </body>
@@ -71,3 +73,39 @@
     <script type="text/jsx" src="js/index.js"></script>
    <!--<script type="text/javascript" src="js/sqlite.js"></script> -->
 </html>
+<!-- 
+<div class="page-content infinite-scroll">
+  <div class="list-block">
+    <ul>
+      <li class="item-content">
+        <div class="item-inner">
+          <div class="item-title">Item 1</div>
+        </div>
+      </li>
+      <li class="item-content">
+        <div class="item-inner">
+          <div class="item-title">Item 2</div>
+        </div>
+      </li>
+      ...
+      <li class="item-content">
+        <div class="item-inner">
+          <div class="item-title">Item 20</div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- Preloader -->
+  <!-- <div class="infinite-scroll-preloader">
+    <div class="preloader"></div>
+  </div>
+</div> 
+.infinite-scroll-preloader {
+  margin-top:-20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.infinite-scroll-preloader .preloader {
+  width:34px;
+  height:34px;
+}         -->
