--- a/www/page2.html
+++ b/www/page2.html
@@ -15,6 +15,6 @@
     <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/worker.sql.js"></script>
     <script type="text/javascript" src="js/sql.js"></script> 
-    <script type="text/jsx" src="js/index.js"></script>
+   <!--  <script type="text/jsx" src="js/index.js"></script> -->
     <script type="text/javascript" src="js/sqlite.js"></script> 
 </html>
