--- a/www/5.html
+++ b/www/5.html
@@ -7,14 +7,28 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Ermac.jpg" /><br><br>
+        <b class="n">Ermac</b></center>
+<div>
+    <p> Variation</p>
+    Mystic<br>Spectral<br>Master of Souls
+    <p>Description</p>
+    Gains an improved Tele-lift and the Tele-Choke.<br>
+    Gains the ability to fly and unique attacks from the air.<br>
+    Gains Soul Ball and the ability to disappear to avoid damage.<br>
+    <p> Physical Attributes</p>
+    Gloves and lower, inner portion of his jacket emit a green glow.<br>
+    A glowing, green gem is placed on his chest.<br>
+    Three soul orbs flow around his body.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
     <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
     <script type="text/javascript" src="js/sql.js"></script> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
-    <script type="text/javascript" src="js/sqlite.js"></script> 
+    
 </html>
