--- a/www/page1.html
+++ b/www/page1.html
@@ -5,99 +5,9 @@
     <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<body class="bg2" ><center><br><br><br>
-	<div class="item-header"><b class="line1">Select Your Fighter</b><br>
-<div class="item-content infinite-scroll" >
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/1.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/2.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/3.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/4.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/5.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/6.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/7.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/8.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/9.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/10.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/11.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/12.png" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/13.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/14.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/15.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/16.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/17.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/18.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/19.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/20.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/21.png" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/22.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/23.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/24.png" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/25.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/26.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/27.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/28.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/29.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/30.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/31.jpg" class="lazy lazy-fadeIn"/></a></td>
-					<td><a href="page2.html"><img src="img/32.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-  <div class="item-block">
-				<table cellpadding="30%">
-				<tr>
-					<td><a href="page2.html"><img src="img/33.jpg" class="lazy lazy-fadeIn"/></a></td>
-				</tr>
-			</table>
-		</div>
-	</div>
-</div>
-</center>
+<body class="bg2" ><br><br><br>
+	<b id="t"></b><br><br><br><br><br><br><br>
+	<div id="c"></div>
 </body>
 <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
@@ -105,6 +15,6 @@
     <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <!-- <script type="text/javascript" src="js/worker.sql.js"></script> -->
     <!--<script type="text/javascript" src="js/sql.js"></script> -->
-    <!-- <script type="text/jsx" src="js/index.js"></script> -->
+    <script type="text/jsx" src="js/index.js"></script>
     <!--<script type="text/javascript" src="js/sqlite.js"></script> -->
 </html>
