--- a/www/10.html
+++ b/www/10.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Jason.png" /><br><br>
+        <b class="n">Jason</b></center>
+<div>
+    <p> Variation</p>
+    Unstoppable<br>Slasher<br>Relentless
+    <p>Description</p>
+    Adds Punishment, Rise, and Resurrection.<br>
+    Adds Bloodshed, Machete Toss and Psycho Slash.<br>
+    Adds Pursuit and Lake Mist<br>
+    <p> Physical Attributes</p>
+    Chain is placed around his neck, with the lower portion of it draped.<br>
+    A machete is wielded in his rihgt hand.<br>
+    Mask is metallic and darker in color.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
