--- a/www/11.html
+++ b/www/11.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Jax.png" /><br><br>
+        <b class="n">Jax(Jackson Briggs)</b></center>
+<div>
+    <p> Variation</p>
+    Pumped Up<br>Heavy Weapons<br>Wrestler
+    <p>Description</p>
+    Gains enhanced Ground Pound and interactive Gotcha Grab.<br>
+    Gains a Rocket Launcher and Submachine Gun.<br>
+    Gains the Multi-Slam, Back Breaker, and Grab Kombos.<br>
+    <p> Physical Attributes</p>
+    Purple lights pulsates throughout his cybernetic arms.<br>
+    Rocket launcher and submachine gun is secured onto his back and waist, respectively.<br>
+    Orange lights pulsate throughout his cybernetic arms, which are darker in color.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
