--- a/www/12.html
+++ b/www/12.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Johnny Cage.png" /><br><br>
+        <b class="n">Johnny Cage</b></center>
+<div>
+    <p> Variation</p>
+    A-List<br>Fistcuffs<br>Stunt Double
+    <p>Description</p>
+    Can charge Normal and Special Attacks for increased damage.<br>
+    Gains Fist Bump, Flashy Kombos, and Normal Attacks.<br>
+    Gains the ability to create Stunt Double Mimics.<br>
+    <p> Physical Attributes</p>
+    Bandages around his forearms are now black.<br>
+    Brass knuckles with "CAGE" engraved on them are placed onto his hands.<br>
+    Sunglasses are green in color.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
