--- a/www/14.html
+++ b/www/14.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Kenshi Takashi.png" /><br><br>
+        <b class="n">Kenshi Takashi</b></center>
+<div>
+    <p> Variation</p>
+    Kenjutsu<br>Balanced<br>Possesed
+    <p>Description</p>
+    Gains Telekinetic Push, Slam, and Toss.<br>
+    Gains the ability to project images of himself to attack.<br>
+    Gains the ability to summon Demons from his shattered blade.<br>
+    <p> Physical Attributes</p>
+    Blindfold is removed, revealing his blue, glowing eyes.<br>
+    Hilt and sheath of the Sento is blue.<br>
+    The Sento is cracked with a red, glowing hue covering the cracked portions of the sword, sheath is removed.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
