--- a/www/15.html
+++ b/www/15.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Kitana.jpg" /><br><br>
+        <b class="n">Kitana</b></center>
+<div>
+    <p> Variation</p>
+    Mournful<br>Royal Storm<br>Assassin
+    <p>Description</p>
+    Gains unique Special Attacks utilizing Jade's Glaive and Staff.<br>
+    Gains Fan-Nado, Bounce Back and Square Boost.<br>
+    Gains Assassin Strike, Princess Parry, and Sharpen.<br>
+    <p> Physical Attributes</p>
+    Jade's Glaive and staff are secured on her back and waist, respectively.<br>
+    Veil is removed, hair sticks emits a blue glow.<br>
+    Attire is now prominently black, black face paint is added around her eyes.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
