--- a/www/16.html
+++ b/www/16.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Kotal Kahn.jpg" /><br><br>
+        <b class="n">Kotal Kahn</b></center>
+<div>
+    <p> Variation</p>
+    Blood God<br>War God<br>Sun God
+    <p>Description</p>
+    Gains crushing Macuahuitl based attacks<br>
+    Gains God Choke Command Grab and Soul Scorch.<br>
+    <p> Physical Attributes</p>
+    Tattoos and eyes emits a red glow, a set ofsickles are secured on the back of his pauldrons.<br>
+    Tattoos emits a blue glow, a Macuahuitl is placed on his back.<br>
+    Tattoos and eyes emits a yellow glow, a set of sickles are secured on the back of his pauldrons.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
