--- a/www/9.html
+++ b/www/9.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Jacqui Briggs.png" /><br><br>
+        <b class="n">Jacqui Briggs</b></center>
+<div>
+    <p> Variation</p>
+    Shotgun<br>Full Auto<br>High Tech
+    <p>Description</p>
+    Gains medium range Shotgun Blast and Low Shotgun Blast.<br>
+    Gains long range Machine Gun and Rocket attacks.<br>
+    Gains short range Plasma Blasts and Plasma Gauntlet Buff.<br>
+    <p> Physical Attributes</p>
+    Gauntlets are white in color.<br>
+    Portable machine guns are mounted on the gauntlets.<br>
+    Gauntlets are now advanced, covered with white metallic plates and illuminated in blue lights.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
