--- a/www/13.html
+++ b/www/13.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Kano.png" /><br><br>
+        <b class="n">Kano</b></center>
+<div>
+    <p> Variation</p>
+    Cybernetic<br>Commando<br>Cutthroat
+    <p>Description</p>
+    Gains multiple Eye Laser and grenade attacks.<br>
+    Gains the Choke Grab, Power Slam, and High/Low Parry.<br>
+    Gains Knife attacks and Power Up move.<br>
+    <p> Physical Attributes</p>
+    Cybernetic equipment and grenades emits a red glow, bowie knives are removed and combat knives are secured on either side of his waist.<br>
+    Cybernetic equipment and grenades emits a yellow glow.<br>
+    Cybernetic equipment and grenades emits a blue glow.<br>
+</div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
