--- a/www/13.html
+++ b/www/13.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Kano.png" /><br><br>
         <b class="n">Kano</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Cybernetic<br>Commando<br>Cutthroat
+    <li>Cybernetic</li><li>Commando</li><li>Cutthroat</li>
     <p>Description</p>
-    Gains multiple Eye Laser and grenade attacks.<br>
-    Gains the Choke Grab, Power Slam, and High/Low Parry.<br>
-    Gains Knife attacks and Power Up move.<br>
+    <li>Gains multiple Eye Laser and grenade attacks.</li>
+    <li>Gains the Choke Grab, Power Slam, and High/Low Parry.</li>
+    <li>Gains Knife attacks and Power Up move.</li>
     <p> Physical Attributes</p>
-    Cybernetic equipment and grenades emits a red glow, bowie knives are removed and combat knives are secured on either side of his waist.<br>
-    Cybernetic equipment and grenades emits a yellow glow.<br>
-    Cybernetic equipment and grenades emits a blue glow.<br>
+    <li>Cybernetic equipment and grenades emits a red glow, bowie knives are removed and combat knives are secured on either side of his waist.</li>
+    <li>Cybernetic equipment and grenades emits a yellow glow.</li>
+    <li>Cybernetic equipment and grenades emits a blue glow.</li>
+</ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
