--- a/www/16.html
+++ b/www/16.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Kotal Kahn.jpg" /><br><br>
         <b class="n">Kotal Kahn</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Blood God<br>War God<br>Sun God
+    <li>Blood God</li><li>War God</li><li>Sun God</li>
     <p>Description</p>
-    Gains crushing Macuahuitl based attacks<br>
-    Gains God Choke Command Grab and Soul Scorch.<br>
+    <li>Summons Crystal, Obsidian and Blood Totems.</li>
+    <li>Gains crushing Macuahuitl based attacks</li>
+    <li>Gains God Choke Command Grab and Soul Scorch.</li>
     <p> Physical Attributes</p>
-    Tattoos and eyes emits a red glow, a set ofsickles are secured on the back of his pauldrons.<br>
-    Tattoos emits a blue glow, a Macuahuitl is placed on his back.<br>
-    Tattoos and eyes emits a yellow glow, a set of sickles are secured on the back of his pauldrons.<br>
+    <li>Tattoos and eyes emits a red glow, a set ofsickles are secured on the back of his pauldrons.</li>
+    <li>Tattoos emits a blue glow, a Macuahuitl is placed on his back.</li>
+    <li>Tattoos and eyes emits a yellow glow, a set of sickles are secured on the back of his pauldrons.</li>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
