--- a/www/21.html
+++ b/www/21.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Mileena.png" /><br><br>
+        <b class="n">Mileena</b></center>
+<div>
+    <ul>
+    <p> Variation</p>
+    <li>Ethereal</li><li>Piercing</li><li>Ravenous</li>
+    <p>Description</p>
+    <li>Gains the ability to Teleport forward, backwards, or in place.</li>
+    <li>Gains unique attacks utilizing her Sai.</li>
+    <li>Gains High/Low Pounce and additional biting attacks.</li>
+    <p> Physical Attributes</p>
+    <li>Skin complexion is paler in color, red markings are added onto her arms.Sais emit a purple glow and are secured on her back.</li>
+    <li>Forearm guards are red.</li>
+    <li>Veil is removed.</li>
+    </ul>
+</div>
 </body>
-	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
