--- a/www/22.html
+++ b/www/22.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Predator.jpg" /><br><br>
+        <b class="n">Predator</b></center>
+<div>
+    <ul>
+    <p> Variation</p>
+    <li>Warrior</li><li>Warrior</li><li>Warrior</li>
+    <p>Description</p>
+    <li>Adds Yautja Strike, Dread Slam, and Self-Detonate.</li>
+    <li>Adds Medi-Kit and Snag.</li>
+    <li>Adds Plasma Shot and Plasma Caster.</li>
+    <p> Physical Attributes</p>
+    <li>Bio-mask is removed.</li>
+    <li>Armor plates are metallic and darker in color.</li>
+    <li>Plasma Caster is secured onto his shoulder.</li>
+    </ul>
+</div>
 </body>
-	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
