--- a/www/23.html
+++ b/www/23.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Quan Chi.jpg" /><br><br>
+        <b class="n">Quan Chi</b></center>
+<div>
+    <ul>
+    <p> Variation</p>
+    <li>Warlock</li><li>Summoner</li><li>Sorcerer</li>
+    <p>Description</p>
+    <li>Gains the ability portals to attack form all angles.</li>
+    <li>Gains the ability to summon a Netherrealm Bat to attack.</li>
+    <li>Gains magical fields that augment self or cripple opponent.</li>
+    <p> Physical Attributes</p>
+    <li>Glowing, green skeletal hands are secured on his back, skull within his chest armor emit a green glow.</li>
+    <li>Eyes and spikes on his pauldrons emit a red glow.</li>
+    <li>Eyes and markings emit a purple glow.</li>
+    </ul>
+</div>
 </body>
-	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
