--- a/www/24.html
+++ b/www/24.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Raiden.png" /><br><br>
+        <b class="n">Raiden</b></center>
+<div>
+    <ul>
+    <p> Variation</p>
+    <li>Thunder God</li><li>Displacer</li><li>Master of Storms</li>
+    <p>Description</p>
+    <li>Gains additional hits to electrical attacks and Enhanced Lighting.</li>
+    <li>Gains the use of Teleport and Sparkport.</li>
+    <li>Gains the ability to place Static Traps.</li>
+    <p> Physical Attributes</p>
+    <li>Lightning surges throughout his gauntlets.</li>
+    <li>Lightning surges throughout his body.</li>
+    <li>Glowing symbols and electricity emits from his hat, which has been altered to a different variant.</li>
+    </ul>
+</div>
 </body>
-	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
