--- a/www/25.html
+++ b/www/25.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-	<div id="root"></div>
+    <center><img src="img/Reptile.jpg" /><br><br>
+        <b class="n">Reptile</b></center>
+<div>
+    <ul>
+    <p> Variation</p>
+    <li>Noxious</li><li>Noxious</li><li>Noxious</li>
+    <p>Description</p>
+    <li>Gains a persistent noxious cloud that inflicts unblockable damage.</li>
+    <li>Gains various stages of invisibility.</li>
+    <li>Gains the ability to increase speed and slow the opponent.</li>
+    <p> Physical Attributes</p>
+    <li>A green, insect polluted noxious cloud surrounds his body.</li>
+    <li>Mask is removed.</li>
+    <li>A snake is enfolded around his waist.</li>
+    </ul>
+</div>
 </body>
-	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
