--- a/www/4.html
+++ b/www/4.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/D'Vorah.jpg" /><br><br>
     <b class="n">D'Vorah</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Brood Mother<br>Swarm Queen<br>Venomous
+    <li>Brood Mother</li><li>Swarm Queen</li><li>Venomous</li>
     <p>Description</p>
-    Gains Krawler and Bug Blast.<br>
-    Gains Vortex Swarm and Wasp Grenade.<br>
-    Gains Bug Burst and Ovipostior based attacks poison the opponent.<br>
+    <li>Gains Krawler and Bug Blast.</li>
+    <li>Gains Vortex Swarm and Wasp Grenade.</li>
+    <li>Gains Bug Burst and Ovipostior based attacks poison the opponent.</li>
     <p> Physical Attributes</p>
-    Hood is removed.<br>
-    Insects flies around her body, stingers become black with red tips.<br>
-    A green, noxious substance is leaking out of her hands and from the scales on her legs.<br>
+    <li>Hood is removed.</li>
+    <li>Insects flies around her body, stingers become black with red tips.</li>
+    <li>A green, noxious substance is leaking out of her hands and from the scales on her legs.</li>
+    </ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
