--- a/www/6.html
+++ b/www/6.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Erron Black.jpg" /><br><br>
         <b class="n">Erron Black</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Marksman<br>Gunslinger<br>Outlaw
+    <li>Marksman</li><li>Gunslinger</li><li>Outlaw</li>
     <p>Description</p>
-    Gains unique Special Attacks utilizing a Long Rifle.<br>
-    Gains Standoff Stance and multiple trick shots with revolvers.<br>
-    Gains unique attacks utilizing a salvaged Tarkatan Arm Blade.<br>
+    <li>Gains unique Special Attacks utilizing a Long Rifle.</li>
+    <li>Gains Standoff Stance and multiple trick shots with revolvers.</li>
+    <li>Gains unique attacks utilizing a salvaged Tarkatan Arm Blade.</li>
     <p> Physical Attributes</p>
-    Long Rifle is holstered on his back.<br>
-    Cowboy hat is placed on his head.<br>
-    Tarkatan arm blade is secured on his back.<br>
+    <li>Long Rifle is holstered on his back.</li>
+    <li>Cowboy hat is placed on his head.</li>
+    <li>Tarkatan arm blade is secured on his back.</li>
+    </ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
