--- a/www/9.html
+++ b/www/9.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Jacqui Briggs.png" /><br><br>
         <b class="n">Jacqui Briggs</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Shotgun<br>Full Auto<br>High Tech
+    <li>Shotgun</li><li>Full Auto</li><li>High Tech</li>
     <p>Description</p>
-    Gains medium range Shotgun Blast and Low Shotgun Blast.<br>
-    Gains long range Machine Gun and Rocket attacks.<br>
-    Gains short range Plasma Blasts and Plasma Gauntlet Buff.<br>
+    <li>Gains medium range Shotgun Blast and Low Shotgun Blast.</li>
+    <li>Gains long range Machine Gun and Rocket attacks.</li>
+    <li>Gains short range Plasma Blasts and Plasma Gauntlet Buff.</li>
     <p> Physical Attributes</p>
-    Gauntlets are white in color.<br>
-    Portable machine guns are mounted on the gauntlets.<br>
-    Gauntlets are now advanced, covered with white metallic plates and illuminated in blue lights.<br>
+    <li>Gauntlets are white in color.</li>
+    <li>Portable machine guns are mounted on the gauntlets.</li>
+    <li>Gauntlets are now advanced, covered with white metallic plates and illuminated in blue lights.</li>
+</ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
