--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="utf-8">s
+    <head>  
         <title>MKX Index</title>
-    <link rel="stylesheet" type="text/css" href="css/framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="css/framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body class="bg1" >
-        <center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div id="r" class="blink"></div>
         </center>
     </body>
