--- a/www/page1.html
+++ b/www/page1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
-<body class="bg2" ><br><br><br>
-	<b id="t"></b><br><br><br><br><br><br><br>
+<body class="framework7-root bg2" ><br><br><br>
+    <div class="views">
+        <div class="view view-main">
+            <div class="pages">
+                <div class="page-content">
+	<b id="t"></b><br><br><br><br><br>
 	<div id="c"></div>
 </body>
 <script crossorigin type="text/javascript" src="js/react.min.js"></script>
