--- a/www/10.html
+++ b/www/10.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Jason.png" /><br><br>
-        <b class="n">Jason</b></center>
+        <b class="n">Jason Voorhees</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Unstoppable<br>Slasher<br>Relentless
+    <li>Unstoppable</li><li>Slasher</li><li>Relentless</li>
     <p>Description</p>
-    Adds Punishment, Rise, and Resurrection.<br>
-    Adds Bloodshed, Machete Toss and Psycho Slash.<br>
-    Adds Pursuit and Lake Mist<br>
+    <li>Adds Punishment, Rise, and Resurrection.</li>
+    <li>Adds Bloodshed, Machete Toss and Psycho Slash.</li>
+    <li>Adds Pursuit and Lake Mist</li>
     <p> Physical Attributes</p>
-    Chain is placed around his neck, with the lower portion of it draped.<br>
-    A machete is wielded in his rihgt hand.<br>
-    Mask is metallic and darker in color.<br>
+    <li>Chain is placed around his neck, with the lower portion of it draped.</li>
+    <li>A machete is wielded in his rihgt hand.</li>
+    <li>Mask is metallic and darker in color.</li>
+</ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
