--- a/www/11.html
+++ b/www/11.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" /><!--     
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" /> -->
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Jax.png" /><br><br>
         <b class="n">Jax(Jackson Briggs)</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Pumped Up<br>Heavy Weapons<br>Wrestler
+    <li>Pumped Up</li><li>Heavy Weapons</li><li>Wrestler</li>
     <p>Description</p>
-    Gains enhanced Ground Pound and interactive Gotcha Grab.<br>
-    Gains a Rocket Launcher and Submachine Gun.<br>
-    Gains the Multi-Slam, Back Breaker, and Grab Kombos.<br>
+    <li>Gains enhanced Ground Pound and interactive Gotcha Grab.</li>
+    <li>Gains a Rocket Launcher and Submachine Gun.</li>
+    <li>Gains the Multi-Slam, Back Breaker, and Grab Kombos.</li>
     <p> Physical Attributes</p>
-    Purple lights pulsates throughout his cybernetic arms.<br>
-    Rocket launcher and submachine gun is secured onto his back and waist, respectively.<br>
-    Orange lights pulsate throughout his cybernetic arms, which are darker in color.<br>
+    <li>Purple lights pulsates throughout his cybernetic arms.</li>
+    <li>Rocket launcher and submachine gun is secured onto his back and waist, respectively.</li>
+    <li>Orange lights pulsate throughout his cybernetic arms, which are darker in color.</li>
+</ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
