--- a/www/12.html
+++ b/www/12.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Johnny Cage.png" /><br><br>
         <b class="n">Johnny Cage</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    A-List<br>Fistcuffs<br>Stunt Double
+    <li>A-List</li><li>Fistcuffs</li><li>Stunt Double</li>
     <p>Description</p>
-    Can charge Normal and Special Attacks for increased damage.<br>
-    Gains Fist Bump, Flashy Kombos, and Normal Attacks.<br>
-    Gains the ability to create Stunt Double Mimics.<br>
+    <li>Can charge Normal and Special Attacks for increased damage.</li>
+    <li>Gains Fist Bump, Flashy Kombos, and Normal Attacks.</li>
+    <li>Gains the ability to create Stunt Double Mimics.</li>
     <p> Physical Attributes</p>
-    Bandages around his forearms are now black.<br>
-    Brass knuckles with "CAGE" engraved on them are placed onto his hands.<br>
-    Sunglasses are green in color.<br>
+    <li>Bandages around his forearms are now black.</li>
+    <li>Brass knuckles with "CAGE" engraved on them are placed onto his hands.</li>
+    <li>Sunglasses are green in color.</li>
+    </ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
