--- a/www/15.html
+++ b/www/15.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Kitana.jpg" /><br><br>
         <b class="n">Kitana</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Mournful<br>Royal Storm<br>Assassin
+    <li>Mournful</li><li>Royal Storm</li><li>Assassin</li>
     <p>Description</p>
-    Gains unique Special Attacks utilizing Jade's Glaive and Staff.<br>
-    Gains Fan-Nado, Bounce Back and Square Boost.<br>
-    Gains Assassin Strike, Princess Parry, and Sharpen.<br>
+    <li>Gains unique Special Attacks utilizing Jade's Glaive and Staff.</li>
+    <li>Gains Fan-Nado, Bounce Back and Square Boost.</li>
+    <li>Gains Assassin Strike, Princess Parry, and Sharpen.</li>
     <p> Physical Attributes</p>
-    Jade's Glaive and staff are secured on her back and waist, respectively.<br>
-    Veil is removed, hair sticks emits a blue glow.<br>
-    Attire is now prominently black, black face paint is added around her eyes.<br>
+    <li>Jade's Glaive and staff are secured on her back and waist, respectively.</li>
+    <li>Veil is removed, hair sticks emits a blue glow.</li>
+    <li>Attire is now prominently black, black face paint is added around her eyes.</li>
+</ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script> --> 
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
