--- a/www/3.html
+++ b/www/3.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Cassie Cage.jpg" /><br><br>
     <b class="n">Cassie Cage</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Hollywood<br>Brawler<br>Spec Ops
+    <li>Hollywood</li><li>Brawler</li><li>Spec Ops</li>
     <p>Description</p>
-    Gains stylish Air Akimbo Gunshots and Nut Kracker.<br>
-    Gains Take Down, Air Power Slam, and Bow Breaker.<br>
-    Gains various Air Strikes and The American Way.<br>
+    <li>Gains stylish Air Akimbo Gunshots and Nut Kracker.</li>
+    <li>Gains Take Down, Air Power Slam, and Bow Breaker.</li>
+    <li>Gains various Air Strikes and The American Way.</li>
     <p> Physical Attributes</p>
-    Wears a pair of sunglasses.<br>
-    Gloves are now yellow.<br>
-    Headset is added onto her right ear, a tactical device is secured onto the right side of her waist.<br>
+    <li>Wears a pair of sunglasses.</li>
+    <li>Gloves are now yellow.</li>
+    <li>Headset is added onto her right ear, a tactical device is secured onto the right side of her waist.</li>
+    </ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
