--- a/www/5.html
+++ b/www/5.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="framework7.material.min.css">
-    <link rel="stylesheet" type="text/css" href="framework7.material.colors.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
     <center><img src="img/Ermac.jpg" /><br><br>
         <b class="n">Ermac</b></center>
 <div>
+    <ul>
     <p> Variation</p>
-    Mystic<br>Spectral<br>Master of Souls
+    <li>Mystic</li><li>Spectral</li><li>Master of Souls</li>
     <p>Description</p>
-    Gains an improved Tele-lift and the Tele-Choke.<br>
-    Gains the ability to fly and unique attacks from the air.<br>
-    Gains Soul Ball and the ability to disappear to avoid damage.<br>
+    <li>Gains an improved Tele-lift and the Tele-Choke.</li>
+    <li>Gains the ability to fly and unique attacks from the air.</li>
+    <li>Gains Soul Ball and the ability to disappear to avoid damage.</li>
     <p> Physical Attributes</p>
-    Gloves and lower, inner portion of his jacket emit a green glow.<br>
-    A glowing, green gem is placed on his chest.<br>
-    Three soul orbs flow around his body.<br>
+    <li>Gloves and lower, inner portion of his jacket emit a green glow.</li>
+    <li>A glowing, green gem is placed on his chest.</li>
+    <li>Three soul orbs flow around his body.</li>
+    </ul>
 </div>
 </body>
 	<script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <!-- <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
     <script type="text/javascript" src="js/sqlite.js"></script> 
     <script type="text/javascript" src="js/worker.sql.js"></script>
-    <script type="text/javascript" src="js/sql.js"></script> 
+    <script type="text/javascript" src="js/sql.js"></script>  -->
    <!--  <script type="text/jsx" src="js/index.js"></script> -->
     
 </html>
