--- a/www/29.html
+++ b/www/29.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/page2.css">
 </head>
 <body class="bg3">
-    <center><img src="img/Sub-Zero.jpg" /><br><br>
+    <center><img src="img/Sub Zero.jpg" /><br><br>
         <b class="n">Sub-Zero</b></center>
 <div>
     <ul>
