4th development update(11/26/17)

--- a/www/page1.html
+++ b/www/page1.html
@@ -12,6 +12,10 @@
                 <div class="page-content">
 	<b id="t"></b><br><br><br><br><br>
 	<div id="c"></div>
+</div>
+</div>
+</div>
+</div>
 </body>
 <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
