--- a/www/page1.html
+++ b/www/page1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
-<body class="framework7-root bg2" ><br><br><br>
+<body class="framework7-root bg2" ><center><br><br><br>
     <div class="views">
         <div class="view view-main">
             <div class="pages">
@@ -15,7 +15,7 @@
 </div>
 </div>
 </div>
-</div>
+</div></center>
 </body>
 <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
