--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body class="bg1" >
-        <center>
+        <center><br><br><br>
             <div id="r" class="blink"></div>
         </center>
     </body>
