--- a/www/page1.html
+++ b/www/page1.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
-<body class="framework7-root bg2" ><center><br><br><br>
+<body class="framework7-root bg2" ><br><br><br>
     <div class="views">
         <div class="view view-main">
             <div class="pages">
                 <div class="page-content">
-	<b id="t"></b><br><br><br><br><br>
+	<center><b id="t"></b></center><br><br><br><br><br>
 	<div id="c"></div>
 </div>
 </div>
 </div>
-</div></center>
+</div>
 </body>
 <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
