--- a/www/33.html
+++ b/www/33.html
@@ -20,6 +20,7 @@
     <li>Takes on the appearance of Smoke (black body with red lights</li>
     <li>Takes on the appearance of Sektor (red body with blue lights)</li>
     <li>Takes on the appearance of Cyrax (yellow body with green lights).</li>
+    <li>Resembles Smoke but is blue with blue lights.</li>
     </ul>
 </div>
 </body>
