--- a/www/page1.html
+++ b/www/page1.html
@@ -4,25 +4,27 @@
 	<link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-</head>
+    <script crossorigin type="text/javascript" src="js/react.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
+    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+    <script type="text/jsx" src="js/index.js"></script></head>
 <body class="framework7-root bg2" ><br><br><br>
     <div class="views">
         <div class="view view-main">
             <div class="pages">
                 <div class="page-content">
-	<center><b id="t"></b></center><br><br><br><br><br>
+            <center>
+        <b id="t"></b>
+            </center><br><br>
 	<div id="c"></div>
-</div>
-</div>
-</div>
-</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-<script crossorigin type="text/javascript" src="js/react.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script crossorigin type="text/javascript" src="js/framework7.min.js"></script>   
+
     <!-- <script type="text/javascript" src="js/worker.sql.js"></script> -->
     <!--<script type="text/javascript" src="js/sql.js"></script> -->
-    <script type="text/jsx" src="js/index.js"></script>
     <!--<script type="text/javascript" src="js/sqlite.js"></script> -->
 </html>
