--- a/www/secretpage.html
+++ b/www/secretpage.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>  
-        <title>MKX Index</title>
-    <link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
+<link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" href="./css/material-icons.css">
@@ -10,11 +8,12 @@
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
     <script type="text/jsx" src="js/process.js"></script></head>
-    <body class="bg1" ><br><br><br><br>
-            <center><div id="r" class="blink"></div></center>
-        <a href="secretpage.html">
+    <body class="bg1" ><br><br><br><br><center>
+    	<p style="color: orange; font-family: times ;font-size: 60%;">Source :<br>
+http://mortalkombat.wikia.com/wiki/Character_Variations<br><br><br>Tap "MKX Characters' Indexx App" to access Kharacter selection and tap the icon (x) to go back to main page.</p></center>
+        <a href="index.html">
         <div class="ks-demo-icon col-33 tablet-15">
-          <div class="icon"><center><i class="material-icons" style="text-indent: 3%; width: 60%; height: auto; color: orange;">help_outline</i></div>
+          <div class="icon"><center><i class="material-icons" style="text-indent: 2%; width: 60%; height: auto; color: light blue;">cancel</i></div>
         </div></a>
     </body>
 </html>
