7th dev update(12/1/17)(multiple html,1 jsx)

--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,7 @@
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
     <script type="text/jsx" src="js/process.js"></script></head>
     <body class="bg1" ><br><br><br><br>
-            <center><div id="r" class="blink"></div></center>
-        <a href="secretpage.html">
-        <div class="ks-demo-icon col-33 tablet-15">
-          <div class="icon"><center><i class="material-icons" style="text-indent: 3%; width: 60%; height: auto; color: orange;">help_outline</i></div>
-        </div></a>
+            <center><div id="r"></div></center>
+        
     </body>
 </html>
