8th development update(1html,1js)(12/2/17)

--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,22 @@
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.min.css">
     <link rel="stylesheet" type="text/css" href="./css/framework7.material.colors.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/page2.css">
     <link rel="stylesheet" href="./css/material-icons.css">
     <script crossorigin type="text/javascript" src="js/react.min.js"></script>
     <script crossorigin type="text/javascript" src="js/react-dom.min.js"></script>
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
-    <script type="text/jsx" src="js/process.js"></script></head>
-    <body class="bg1" ><br><br><br><br>
-            <center><div id="r"></div></center>
-        
+    <script type="text/jsx" src="js/process.js"></script>
+    </head>
+    <body class="framework7-root bg1">
+        <div class="views">
+        <div class="view view-main">
+            <div class="pages">
+                <div class="page-content">
+        <div id="r"></div>
+                </div>
+            </div>
+        </div>
+    </div>        
     </body>
 </html>
